# qsar-in-browser

./: .gitignore  404.html  CNAME  README.md  ]  clustering.py  index.html  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tests.tsx  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml
.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  export-detail.json  images-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
.next/server/: _error.js  app-paths-manifest.json  components_Histogram_js.js  components_MoleculeStructure_js.js  components_PCA_Plot_js.js  components_RandomForest_js.js  components_TargetGetter_js.js  components_rdkit_fp_js.js  components_tSNE_Plot_js.js  middleware-build-manifest.js  middleware-react-loadable-manifest.js  pages-manifest.json  server-reference-manifest.json  webpack-runtime.js
app/: layout.tsx  page.tsx
app/about/: page.tsx
app/load_data/: page.tsx
app/misc_tools/: page.tsx
app/tools/: layout.tsx
c_code/umap/: CMakeLists.txt  main.cpp
components/: BarChart.js  Card.js  CompoundGetter.js  D3ColorLegend.js  DataPreProcessToolKit.js  Histogram.js  Loader.js  MMA.js  ModalComponent.js  MoleculeStructure.js  Navbar.js  PCA_Plot.js  RandomForest.js  ScatterPlot.js  Tabbed.js  TargetGetter.js  ThemeSwitcher.js  Themes.js  ToolTip.js  rdkit_fp.js  tSNE_Plot.js
components/dataloader/: CSVLoader.tsx  CompoundGetter.tsx  DataLoader.tsx  DataPreProcessToolKit.tsx  LoadFromWork.tsx  PubChemGetter.tsx  SDFFileLoader.tsx  ScreeningCompoundsLoader.tsx  TargetGetter.tsx
components/ml-forms/: RF.tsx  XGB.tsx
components/ui-comps/: CornerMenu.tsx  FAQComp.tsx  Loader.tsx  ModalComponent.tsx  Navbar.tsx  PaginatedTables.tsx  PaginatedTables2.tsx  ReportSetupModal.tsx  TabbedComponents.tsx  TableFooter.tsx  Tags.tsx  ThemeSwitcher.tsx
components/utils/: arrayToJson.ts  bit_vect.ts  coverage_3.0.ipynb  coverage_score.ts  csv_functions.ts  d3_legend.js  d3toPNG.tsx  data.json  data_funcs.ts  ex.js  fp_sorter.ts  get_fp_settings.ts  ks_test.ts  loadGraphFromScaffNet.ts  mol_cleanup.ts  nsga2.ts  rdkit_loader.js  rdkit_loader.ts  sdfFileParser.ts  tanimoto.ts  usual_maths_stuff.js
context/: ErrorContext.tsx  GAContext.tsx  LigandContext.js  LigandContext.tsx  MLResultsContext.tsx  NotificationContext.tsx  PyodideContext.js  PyodideContext.tsx  RDKitContent.js  RDKitContext.tsx  TargetContext.js  TargetContext.tsx  ThemeContext.tsx
dmpnn/: Cargo.toml  README.md  pretrain.py
dmpnn/.cargo/: config.toml
dmpnn/src/: lib.rs
pages/: _app.js  _document.js  about.js  index.js
pages/tools/: data-distribution.js  preprocess.js
public/: RDKit_minimal.js  cleaned_compounds.csv  coi-serviceworker.js  pyodide_ml.py
public/dmpnn_rust/: dmpnn_wasm.d.ts  dmpnn_wasm.js  dmpnn_wasm_bg.wasm  dmpnn_wasm_bg.wasm.d.ts
public/jsme/: jsme.nocache.js
public/python/: dim_red.py  (+2 more)
rust_code/: Cargo.toml
src/: app.html
styles/: buttons.css  corner-menu.css  csv_file.css  form-comps.css  index.css  landing.css  sidebar.css  tables.css  tabs.css  tags.css  theme-vars.css  theme_button.module.css  variables-dark.css  variables-light.css
tools/: data-distribution.html  preprocess.html
types/: GraphData.ts
(+817 files in other folders)
