[package]
name = "dmpnn_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candle-core  = { version = "0.9" }
candle-nn    = { version = "0.9" }
wasm-bindgen = "0.2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
getrandom    = { version = "0.3", features = ["wasm_js"] }
safetensors = "0.4"
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6.5"

[profile.release]
opt-level = 3
lto = true
